syntax = "proto3";

package matrixserver.v1alpha1;

option go_package = "github.com/justinsb/kllama/api/v1alpha1";

// Serves simple matrix operations
service BigCalculator {
  // Performs a one-off calculation
  rpc Calculate (CalculateRequest) returns (CalculateResponse) {}
}

// The request message containing the user's name.
message CalculateRequest {
    repeated Tensor tensors = 1;

    repeated int32 output_tensors = 2;
}

// The response message containing the greetings
message CalculateResponse {
    repeated Tensor results = 2;
}


message Tensor {
    int32 id = 1;

    Source source = 2;
    InlineData inline_data = 3;
    TensorOperation computation = 4;
}

message Source {
}

message InlineData {
    repeated int32 dimensions = 1;

    repeated float values = 2;
}

message TensorOperation {
    oneof operation {
        MatrixMultiply matrix_multiply = 1;
        Add add = 2;
        DotMultiply dot_multiply = 3;

        Silu silu = 20;
        Softmax softmax = 21;
        RMSNorm rms_norm = 22;

        // For testing
        LinearScale linear_scale = 100;
    }
}

message LinearScale {
    int32 source = 1;

    float scale = 2;
}


message RMSNorm {
    int32 source = 1;

    float epsilon = 2;
}

message DotMultiply {
    repeated int32 sources = 1;
}

message MatrixMultiply {
    repeated int32 sources = 1;
}

message Add {
    repeated int32 sources = 1;
}

message Silu {
    int32 source = 1;
}

message Softmax {
    int32 source = 1;
}